sort.pancake.GatesPancake.scala.error
Compilation error:
GatesPancake:2: error: unclosed character literal
  if(isSelected(world'8 pancakes')){
                     ^GatesPancake:2: error: unclosed character literal
  if(isSelected(world'8 pancakes')){
                                ^GatesPancake:2: error: ')' expected but something found.
  if(isSelected(world'8 pancakes')){
                     ^GatesPancake:18: error: illegal start of simple expression
}
^